// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brevo banner component testing renders a heading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="w-full px-1 text-gray-700 antialiased"
      >
        <div
          class="mx-auto max-w-screen-md"
        >
          <h2
            class="text-2xl font-bold"
          >
            <div>
              Boilerplate code for your Nextjs project
            </div>
          </h2>
          <p>
            <span
              aria-label="rocket"
              role="img"
            >
              🚀
            </span>
             
            Next.js Boilerplate is a starter code for your Next js project by putting developer experience first .
             
            <span
              aria-label="zap"
              role="img"
            >
              ⚡️
            </span>
             
            Made with Next.js, ESLint, Prettier, Husky, Lint-Staged, VSCode, CF-Pages, PostCSS.
          </p>
          <h3
            class="text-lg font-semibold pt-3"
          >
            Next js Boilerplate Features
          </h3>
          <p>
            Developer experience first:
          </p>
          <ul>
            <li>
              <span
                aria-label="fire"
                role="img"
              >
                🔥
              </span>
               
              <a
                href="https://nextjs.org"
                rel="nofollow"
              >
                Next.js
              </a>
               
              for Static Site Generator
            </li>
            <li>
              <span
                aria-label="nail_care"
                role="img"
              >
                💅
              </span>
               
              PostCSS
            </li>
            <li>
              <span
                aria-label="pencil2"
                role="img"
              >
                ✏️
              </span>
               
              Linter with
               
              <a
                href="https://eslint.org"
                rel="nofollow"
              >
                ESLint
              </a>
            </li>
            <li>
              <span
                aria-label="hammer_and_wrench"
                role="img"
              >
                🛠
              </span>
               
              Code Formatter with
               
              <a
                href="https://prettier.io"
                rel="nofollow"
              >
                Prettier
              </a>
            </li>
            <li>
              <span
                aria-label="fox_face"
                role="img"
              >
                🦊
              </span>
               
              Husky for Git Hooks
            </li>
            <li>
              <span
                aria-label="no_entry_sign"
                role="img"
              >
                🚫
              </span>
               
              Lint-staged for running linters on Git staged files
            </li>
            <li>
              <span
                aria-label="no_entry_sign"
                role="img"
              >
                🗂
              </span>
               
              VSCode configuration: Debug, Settings, Tasks and extension for PostCSS, ESLint, Prettier, TypeScript
            </li>
            <li>
              <span
                aria-label="robot"
                role="img"
              >
                ⚙️
              </span>
               
              <a
                href="https://www.npmjs.com/package/@next/bundle-analyzer"
                rel="nofollow"
              >
                Bundler Analyzer
              </a>
            </li>
            <li>
              <span
                aria-label="hundred"
                role="img"
              >
                💯
              </span>
               
              Maximize lighthouse score
            </li>
          </ul>
          <p>
            Built-in feature from Next.js:
          </p>
          <ul>
            <li>
              <span
                aria-label="coffee"
                role="img"
              >
                ☕
              </span>
               
              Minify HTML
               
              &
               
              CSS
            </li>
            <li>
              <span
                aria-label="dash"
                role="img"
              >
                💨
              </span>
               
              Live reload
            </li>
            <li>
              <span
                aria-label="white_check_mark"
                role="img"
              >
                ✅
              </span>
               
              Cache busting
            </li>
          </ul>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-full px-1 text-gray-700 antialiased"
    >
      <div
        class="mx-auto max-w-screen-md"
      >
        <h2
          class="text-2xl font-bold"
        >
          <div>
            Boilerplate code for your Nextjs project
          </div>
        </h2>
        <p>
          <span
            aria-label="rocket"
            role="img"
          >
            🚀
          </span>
           
          Next.js Boilerplate is a starter code for your Next js project by putting developer experience first .
           
          <span
            aria-label="zap"
            role="img"
          >
            ⚡️
          </span>
           
          Made with Next.js, ESLint, Prettier, Husky, Lint-Staged, VSCode, CF-Pages, PostCSS.
        </p>
        <h3
          class="text-lg font-semibold pt-3"
        >
          Next js Boilerplate Features
        </h3>
        <p>
          Developer experience first:
        </p>
        <ul>
          <li>
            <span
              aria-label="fire"
              role="img"
            >
              🔥
            </span>
             
            <a
              href="https://nextjs.org"
              rel="nofollow"
            >
              Next.js
            </a>
             
            for Static Site Generator
          </li>
          <li>
            <span
              aria-label="nail_care"
              role="img"
            >
              💅
            </span>
             
            PostCSS
          </li>
          <li>
            <span
              aria-label="pencil2"
              role="img"
            >
              ✏️
            </span>
             
            Linter with
             
            <a
              href="https://eslint.org"
              rel="nofollow"
            >
              ESLint
            </a>
          </li>
          <li>
            <span
              aria-label="hammer_and_wrench"
              role="img"
            >
              🛠
            </span>
             
            Code Formatter with
             
            <a
              href="https://prettier.io"
              rel="nofollow"
            >
              Prettier
            </a>
          </li>
          <li>
            <span
              aria-label="fox_face"
              role="img"
            >
              🦊
            </span>
             
            Husky for Git Hooks
          </li>
          <li>
            <span
              aria-label="no_entry_sign"
              role="img"
            >
              🚫
            </span>
             
            Lint-staged for running linters on Git staged files
          </li>
          <li>
            <span
              aria-label="no_entry_sign"
              role="img"
            >
              🗂
            </span>
             
            VSCode configuration: Debug, Settings, Tasks and extension for PostCSS, ESLint, Prettier, TypeScript
          </li>
          <li>
            <span
              aria-label="robot"
              role="img"
            >
              ⚙️
            </span>
             
            <a
              href="https://www.npmjs.com/package/@next/bundle-analyzer"
              rel="nofollow"
            >
              Bundler Analyzer
            </a>
          </li>
          <li>
            <span
              aria-label="hundred"
              role="img"
            >
              💯
            </span>
             
            Maximize lighthouse score
          </li>
        </ul>
        <p>
          Built-in feature from Next.js:
        </p>
        <ul>
          <li>
            <span
              aria-label="coffee"
              role="img"
            >
              ☕
            </span>
             
            Minify HTML
             
            &
             
            CSS
          </li>
          <li>
            <span
              aria-label="dash"
              role="img"
            >
              💨
            </span>
             
            Live reload
          </li>
          <li>
            <span
              aria-label="white_check_mark"
              role="img"
            >
              ✅
            </span>
             
            Cache busting
          </li>
        </ul>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Brevo banner component testing renders a heading 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <p>
        Built-in feature from Next.js:
      </p>
      <ul>
        <li>
          <span
            aria-label="coffee"
            role="img"
          >
            ☕
          </span>
           
          Minify HTML
           
          &
           
          CSS
        </li>
        <li>
          <span
            aria-label="dash"
            role="img"
          >
            💨
          </span>
           
          Live reload
        </li>
        <li>
          <span
            aria-label="white_check_mark"
            role="img"
          >
            ✅
          </span>
           
          Cache busting
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <p>
      Built-in feature from Next.js:
    </p>
    <ul>
      <li>
        <span
          aria-label="coffee"
          role="img"
        >
          ☕
        </span>
         
        Minify HTML
         
        &
         
        CSS
      </li>
      <li>
        <span
          aria-label="dash"
          role="img"
        >
          💨
        </span>
         
        Live reload
      </li>
      <li>
        <span
          aria-label="white_check_mark"
          role="img"
        >
          ✅
        </span>
         
        Cache busting
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
